# propulsion-lab

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  LICENSE  PISTONLAB_PLAN.md  README.md  ROADMAP.md  build_case_studies.py  fly.toml  pyproject.toml  requirements-prod.txt  requirements.txt
.claude/: launch.json
.github/: FUNDING.yml
app/: __init__.py  cfd.py  main.py  python_export.py  reporting.py  schemas.py  schemas_piston.py  validation.py
blender/: SETUP.md  jet_engine.blend  jet_engine_cutaway.blend  jet_engine_ramjet.blend  jet_engine_scramjet.blend  jet_engine_turbojet.blend  jet_engine_turboprop.blend
scripts/: make_favicons.py
tests/: test_advanced_cycles.py  test_advanced_cycles_validation.py  test_atmosphere.py  test_bleed_cooling.py  test_cd_nozzle.py  test_cfd.py  test_classroom.py  test_combustor_equilibrium.py  test_components.py  test_compressor_maps.py  test_cycle_diagrams.py  test_emissions.py  test_help.py  test_map_matching.py  test_maps_common.py  test_mission.py  test_mobile_console.py  test_off_design.py  test_off_design_api.py  test_optimization.py  test_piston_api.py  test_piston_aspiration.py  test_piston_cycle.py  test_piston_friction.py  test_piston_fuel.py  test_piston_heat_transfer.py  test_piston_limits.py  test_piston_pumping.py  test_pistonlab.py  test_pro_and_deploy.py  test_public_config.py  test_python_export.py  test_real_gas.py  test_sensitivity.py  test_surrogate.py  test_tour.py  test_transient.py  test_turbine_maps.py  (+8 more)
wasm/propulsion-core/: Cargo.toml
wasm/propulsion-core/src/: components.rs  cycle.rs  lib.rs
(+100 files in other folders)
